# MinecraftModDocumenation

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
API/ai/: index.html
API/capture/: index.html
API/configuration/: index.html
API/experience/: index.html
API/fuel/: index.html
API/interaction/: index.html
API/introduction/: index.html
API/item_storage/: index.html
API/look/: index.html
API/operation/: index.html
API/scan/: index.html
API/suck/: index.html
API/warp/: index.html
Turtlematic/: index.html
Turtlematic/automata/automata/: index.html
Turtlematic/automata/brewing/: index.html
Turtlematic/automata/enchanting/: index.html
Turtlematic/automata/end/: index.html
Turtlematic/automata/husbandry/: index.html
Turtlematic/automata/mason/: index.html
Turtlematic/automata/mercantile/: index.html
Turtlematic/automata/protective/: index.html
Turtlematic/automata/smithing/: index.html
Turtlematic/miscellaneous/bow/: index.html
UnlimitedPeripheralWorks/: index.html
digitalitems/: index.html
docs/: digitalitems.md  index.md
docs/.obsidian/: appearance.json  workspace.json
docs/.obsidian/snippets/: images.css
docs/API/: ai.md  capture.md  configuration.md  experience.md  fuel.md  introduction.md  item_storage.md  look.md  operation.md  scan.md  suck.md  warp.md
docs/Turtlematic/: index.md
docs/UnlimitedPeripheralWorks/: index.md  storage.md
docs/turtlematic/: index.md
docs/unlimitedperipheralworks/: index.md
search/: search_index.json
(+100 files in other folders)
